feat: Introduce workflow API access and chat features, refactor workflow execution, and enhance monitoring dashboards.